--- a/indek.html
+++ b/indek.html
@@ -101,7 +101,7 @@
         <div class="col-sm-3">
           <div class="card mx-auto" style="width: 17rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Cark Parking Detection</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="card-link">Card link</a>
@@ -112,7 +112,7 @@
         <div class="col-sm-3">
           <div class="card mx-auto" style="width: 17rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Web Profile</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="card-link">Card link</a>
@@ -123,7 +123,7 @@
         <div class="col-sm-3">
           <div class="card mx-auto" style="width: 17rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">metode Profile Matching</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="card-link">Card link</a>
@@ -134,7 +134,7 @@
         <div class="col-sm-3">
           <div class="card mx-auto" style="width: 17rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Company Profile</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="card-link">Card link</a>
